<resources>
    <string name="app_name">QBar Scanner</string>
    <string name="app_name_full">QBar - Qr and Barcode Scanner</string>
    <string name="about">About QBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--ad units-->
    <string name="app_pub_id">ca-app-pub-5244380836127327~3321417095</string>
    <string name="ad_unit_id_result_bottom">ca-app-pub-5244380836127327/2975653959</string>
    <string name="ad_unit_id_scanner_bottom">ca-app-pub-5244380836127327/8098294172</string>
    <string name="ad_unit_id_history_bottom">ca-app-pub-5244380836127327/7449073824</string>
    <string name="ad_unit_id_scanner_full_screen">ca-app-pub-5244380836127327/4355233475</string>
    <string name="ad_unit_id_search_or_open_link">ca-app-pub-5244380836127327/6315451247</string>

    <string name="action_flash">Toggle Flash</string>
    <string name="action_history">Open History</string>
    <string name="app_name_short">QBar</string>
    <string name="app_name_part">Qr and Barcode Scanner</string>
    <string name="qbar_logo">QBar Logo</string>
    <string name="credits">--Credits--</string>
    <string name="barcode_scanner_library">ZXing Android Embedded</string>
    <string name="apache_license_version_2_0">Apache License, Version 2.0</string>
    <string name="the_zxing_project">The ZXing project</string>
    <string name="type">Type: </string>
    <string name="qr_and_barcode_scanner">Qr and Barcode scanner</string>
    <string name="title_history">History</string>
    <string name="no_scan_history">No Scan History</string>
    <string name="clear_all">Clear All</string>
    <string name="product_type_drawable">Product Type Drawable</string>
    <string name="delete_drawable">delete_drawable</string>
    <string name="open_link_text">Open Link</string>
    <string name="web_search_text">Web Search</string>
    <string name="share_text">Share</string>
    <string name="search_product">Search Product</string>
    <string name="share_product">Share Product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">Text</string>
    <string name="web_link">Web Link</string>
    <string name="geo">Geo</string>
    <string name="directions">Directions</string>
    <string name="show_map">Show Map</string>
    <string name="sms">SMS</string>
    <string name="send_sms">Send SMS</string>
    <string name="tel">Telephone</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="wifi">WiFi</string>
    <string name="connect">Connect</string>
    <string name="email">Email</string>
    <string name="add_contanct">Add Contact</string>
    <string name="vehicle">Vehicle</string>
</resources>
