<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/scannerFragment">

    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.sagar.qbar.activities.host.scanner.ScannerFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_scanner">
        <action
            android:id="@+id/action_scannerFragment_to_URIFragment"
            app:destination="@id/URIFragment" />
        <action
            android:id="@+id/action_scannerFragment_to_textFragment"
            app:destination="@id/textFragment" />
        <action
            android:id="@+id/action_scannerFragment_to_barcodeFragment"
            app:destination="@id/barcodeFragment" />
        <action
            android:id="@+id/action_scannerFragment_to_geoFragment"
            app:destination="@id/geoFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.sagar.qbar.activities.host.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_historyFragment_to_URIFragment"
            app:destination="@id/URIFragment" />
        <action
            android:id="@+id/action_historyFragment_to_textFragment"
            app:destination="@id/textFragment" />
        <action
            android:id="@+id/action_historyFragment_to_barcodeFragment"
            app:destination="@id/barcodeFragment" />
        <action
            android:id="@+id/action_historyFragment_to_geoFragment"
            app:destination="@id/geoFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.sagar.qbar.activities.host.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/URIFragment"
        android:name="com.sagar.qbar.activities.host.results.uri.URIFragment"
        android:label="Scan"
        tools:layout="@layout/fragment_uri">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/textFragment"
        android:name="com.sagar.qbar.activities.host.results.text.TextFragment"
        android:label="Scan"
        tools:layout="@layout/fragment_text">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/barcodeFragment"
        android:name="com.sagar.qbar.activities.host.results.barcode.BarcodeFragment"
        android:label="Scan"
        tools:layout="@layout/fragment_barcode">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/geoFragment"
        android:name="com.sagar.qbar.activities.host.results.geo.GeoFragment"
        android:label="fragment_geo"
        tools:layout="@layout/fragment_geo">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>
</navigation>