<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bindind="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.sagar.qbar.activities.host.results.uri.URIFragmentModel" />

        <variable
            name="commonModel"
            type="com.sagar.qbar.activities.host.results.ResultCommonModel" />

        <variable
            name="handler"
            type="com.sagar.qbar.activities.host.results.uri.URIFragmentEventHandler" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lighGrayBackground"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include
            android:id="@+id/uri_header"
            layout="@layout/result_header"
            app:layout_constraintEnd_toEndOf="parent"
            bindind:commonModel="@{commonModel}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/linkResultText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:ellipsize="end"
            android:maxLines="5"
            android:onClick="@{()-> handler.onClickOpenLink(model)}"
            android:padding="15dp"
            android:text="@{model.uri}"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uri_header" />


        <Button
            android:id="@+id/open_link_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:onClick="@{()-> handler.onClickOpenLink(model)}"
            android:padding="10dp"
            android:text="@string/open_link_text"
            android:theme="@style/MyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linkResultText" />

        <Button
            android:id="@+id/link_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:onClick="@{()-> handler.onClickWebSearch(model)}"
            android:padding="10dp"
            android:text="@string/web_search_text"
            android:theme="@style/MyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/open_link_button" />


        <Button
            android:id="@+id/link_share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:onClick="@{()->handler.onClickShare(model)}"
            android:padding="10dp"
            android:text="@string/share_text"
            android:theme="@style/MyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link_search_button" />

    </android.support.constraint.ConstraintLayout>
</layout>
