<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bindind="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.sagar.qbar.activities.host.results.geo.GeoFragmentModel" />

        <variable
            name="commonModel"
            type="com.sagar.qbar.activities.host.results.ResultCommonModel" />

        <variable
            name="handler"
            type="com.sagar.qbar.activities.host.results.geo.GeoFragmentEventHandler" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/lighGrayBackground"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <include
                android:id="@+id/geo_header"
                layout="@layout/result_header"
                app:layout_constraintEnd_toEndOf="parent"
                bindind:commonModel="@{commonModel}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="15dp"
                android:text="@{model.displayResult}"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/geo_header" />

            <Button
                android:id="@+id/direction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:onClick="@{()-> handler.onClickDirection(model)}"
                android:padding="10dp"
                android:text="@string/directions"
                android:theme="@style/MyButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/show_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:onClick="@{()-> handler.onClickShowMap(model)}"
                android:padding="10dp"
                android:text="@string/show_map"
                android:theme="@style/MyButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/direction" />

            <Button
                android:id="@+id/link_share_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:onClick="@{()->handler.onClickShare(model)}"
                android:padding="10dp"
                android:text="@string/share_text"
                android:theme="@style/MyButton"
                ads:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_map" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
